Added delete option and fixed form height

--- a/userList Tabela/index.html
+++ b/userList Tabela/index.html
@@ -21,10 +21,10 @@
     </div>
     <table class="usersTable">
         <tr>
-            <th class="RB">RB.</th>
             <th>Ime</th>
             <th>Prezime</th>
             <th>Zanimanje</th>
+            <th>Akcija</th>
           </tr>
     </table>
 </div>
