added delete function, small changes to css, added RB.

--- a/userList Tabela/index.html
+++ b/userList Tabela/index.html
@@ -19,6 +19,7 @@
         <input type="text" name="occupation" id="occupation">
         <button id="submit" type="button" style="margin-top: 20px;">Dodaj Korisnika</button>
     </div>
+  <div class="div">
     <table class="usersTable">
         <tr>
             <th>RB.</th>
@@ -28,6 +29,7 @@
             <th>Akcija</th>
           </tr>
     </table>
+  </div>
 </div>
 <script src="app.js" defer></script>
 </body>
